v0.2.6 Ruby 1.9 compatability and code cleanup

v0.2.5 Fixing bug with Commandline that v0.2.1 introduced

v0.2.1 Fixing bug with CLI tool when no filename given

v0.2.0 Complete rework from ground up. Old API is deprecated.

v0.1.3 First working version on Github