@@ -1,0 +1,200 @@
+/* -----------------------------------------------------------------------
+
+
+ Blueprint CSS Framework 0.9
+ http://blueprintcss.org
+
+   * Copyright (c) 2007-Present. See LICENSE for more info.
+   * See README for instructions on how to use Blueprint.
+   * For credits and origins, see AUTHORS.
+   * This is a compressed file. See the sources in the 'src' directory.
+
+----------------------------------------------------------------------- */
+
+/* reset.css */
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, code, del, dfn, em, img, q, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {margin:0;padding:0;border:0;font-weight:inherit;font-style:inherit;font-size:100%;font-family:inherit;vertical-align:baseline;}
+body {line-height:1.5;}
+table {border-collapse:separate;border-spacing:0;}
+caption, th, td {text-align:left;font-weight:normal;}
+table, td, th {vertical-align:middle;}
+blockquote:before, blockquote:after, q:before, q:after {content:"";}
+blockquote, q {quotes:"" "";}
+a img {border:none;}
+
+/* typography.css */
+html {font-size:100.01%;}
+body {font-size:75%;color:#222;background:#fff;font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;}
+h1, h2, h3, h4, h5, h6 {font-weight:normal;color:#111;}
+h1 {font-size:3em;line-height:1;margin-bottom:0.5em;}
+h2 {font-size:2em;margin-bottom:0.75em;}
+h3 {font-size:1.5em;line-height:1;margin-bottom:1em;}
+h4 {font-size:1.2em;line-height:1.25;margin-bottom:1.25em;}
+h5 {font-size:1em;font-weight:bold;margin-bottom:1.5em;}
+h6 {font-size:1em;font-weight:bold;}
+h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {margin:0;}
+p {margin:0 0 1.5em;}
+p img.left {float:left;margin:1.5em 1.5em 1.5em 0;padding:0;}
+p img.right {float:right;margin:1.5em 0 1.5em 1.5em;}
+a:focus, a:hover {color:#000;}
+a {color:#009;text-decoration:underline;}
+blockquote {margin:1.5em;color:#666;font-style:italic;}
+strong {font-weight:bold;}
+em, dfn {font-style:italic;}
+dfn {font-weight:bold;}
+sup, sub {line-height:0;}
+abbr, acronym {border-bottom:1px dotted #666;}
+address {margin:0 0 1.5em;font-style:italic;}
+del {color:#666;}
+pre {margin:1.5em 0;white-space:pre;}
+pre, code, tt {font:1em 'andale mono', 'lucida console', monospace;line-height:1.5;}
+li ul, li ol {margin:0 1.5em;}
+ul, ol {margin:0 1.5em 1.5em 1.5em;}
+ul {list-style-type:disc;}
+ol {list-style-type:decimal;}
+dl {margin:0 0 1.5em 0;}
+dl dt {font-weight:bold;}
+dd {margin-left:1.5em;}
+table {margin-bottom:1.4em;width:100%;}
+th {font-weight:bold;}
+thead th {background:#c3d9ff;}
+th, td, caption {padding:4px 10px 4px 5px;}
+tr.even td {background:#e5ecf9;}
+tfoot {font-style:italic;}
+caption {background:#eee;}
+.small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
+.large {font-size:1.2em;line-height:2.5em;margin-bottom:1.25em;}
+.hide {display:none;}
+.quiet {color:#666;}
+.loud {color:#000;}
+.highlight {background:#ff0;}
+.added {background:#060;color:#fff;}
+.removed {background:#900;color:#fff;}
+.first {margin-left:0;padding-left:0;}
+.last {margin-right:0;padding-right:0;}
+.top {margin-top:0;padding-top:0;}
+.bottom {margin-bottom:0;padding-bottom:0;}
+
+/* forms.css */
+label {font-weight:bold;}
+fieldset {padding:1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}
+legend {font-weight:bold;font-size:1.2em;}
+input[type=text], input[type=password], input.text, input.title, textarea, select {background-color:#fff;border:1px solid #bbb;}
+input[type=text]:focus, input[type=password]:focus, input.text:focus, input.title:focus, textarea:focus, select:focus {border-color:#666;}
+input[type=text], input[type=password], input.text, input.title, textarea, select {margin:0.5em 0;}
+input.text, input.title {width:300px;padding:5px;}
+input.title {font-size:1.5em;}
+textarea {width:390px;height:250px;padding:5px;}
+input[type=checkbox], input[type=radio], input.checkbox, input.radio {position:relative;top:.25em;}
+form.inline {line-height:3;}
+form.inline p {margin-bottom:0;}
+.error, .notice, .success {padding:.8em;margin-bottom:1em;border:2px solid #ddd;}
+.error {background:#FBE3E4;color:#8a1f11;border-color:#FBC2C4;}
+.notice {background:#FFF6BF;color:#514721;border-color:#FFD324;}
+.success {background:#E6EFC2;color:#264409;border-color:#C6D880;}
+.error a {color:#8a1f11;}
+.notice a {color:#514721;}
+.success a {color:#264409;}
+
+/* grid.css */
+.container {width:645px;margin:0 auto;}
+.showgrid {background:url(src/grid.png);}
+.column, div.span-1, div.span-2, div.span-3, div.span-4, div.span-5, div.span-6, div.span-7, div.span-8, div.span-9, div.span-10, div.span-11, div.span-12 {float:left;margin-right:15px;}
+.last, div.last {margin-right:0;}
+.span-1 {width:40px;}
+.span-2 {width:95px;}
+.span-3 {width:150px;}
+.span-4 {width:205px;}
+.span-5 {width:260px;}
+.span-6 {width:315px;}
+.span-7 {width:370px;}
+.span-8 {width:425px;}
+.span-9 {width:480px;}
+.span-10 {width:535px;}
+.span-11 {width:590px;}
+.span-12, div.span-12 {width:645px;margin-right:0;}
+input.span-1, textarea.span-1, input.span-2, textarea.span-2, input.span-3, textarea.span-3, input.span-4, textarea.span-4, input.span-5, textarea.span-5, input.span-6, textarea.span-6, input.span-7, textarea.span-7, input.span-8, textarea.span-8, input.span-9, textarea.span-9, input.span-10, textarea.span-10, input.span-11, textarea.span-11, input.span-12, textarea.span-12 {border-left-width:1px!important;border-right-width:1px!important;padding-left:5px!important;padding-right:5px!important;}
+input.span-1, textarea.span-1 {width:28px!important;}
+input.span-2, textarea.span-2 {width:83px!important;}
+input.span-3, textarea.span-3 {width:138px!important;}
+input.span-4, textarea.span-4 {width:193px!important;}
+input.span-5, textarea.span-5 {width:248px!important;}
+input.span-6, textarea.span-6 {width:303px!important;}
+input.span-7, textarea.span-7 {width:358px!important;}
+input.span-8, textarea.span-8 {width:413px!important;}
+input.span-9, textarea.span-9 {width:468px!important;}
+input.span-10, textarea.span-10 {width:523px!important;}
+input.span-11, textarea.span-11 {width:578px!important;}
+input.span-12, textarea.span-12 {width:633px!important;}
+.append-1 {padding-right:55px;}
+.append-2 {padding-right:110px;}
+.append-3 {padding-right:165px;}
+.append-4 {padding-right:220px;}
+.append-5 {padding-right:275px;}
+.append-6 {padding-right:330px;}
+.append-7 {padding-right:385px;}
+.append-8 {padding-right:440px;}
+.append-9 {padding-right:495px;}
+.append-10 {padding-right:550px;}
+.append-11 {padding-right:605px;}
+.prepend-1 {padding-left:55px;}
+.prepend-2 {padding-left:110px;}
+.prepend-3 {padding-left:165px;}
+.prepend-4 {padding-left:220px;}
+.prepend-5 {padding-left:275px;}
+.prepend-6 {padding-left:330px;}
+.prepend-7 {padding-left:385px;}
+.prepend-8 {padding-left:440px;}
+.prepend-9 {padding-left:495px;}
+.prepend-10 {padding-left:550px;}
+.prepend-11 {padding-left:605px;}
+div.border {padding-right:6px;margin-right:7px;border-right:1px solid #eee;}
+div.colborder {padding-right:34px;margin-right:35px;border-right:1px solid #eee;}
+.pull-1 {margin-left:-55px;}
+.pull-2 {margin-left:-110px;}
+.pull-3 {margin-left:-165px;}
+.pull-4 {margin-left:-220px;}
+.pull-5 {margin-left:-275px;}
+.pull-6 {margin-left:-330px;}
+.pull-7 {margin-left:-385px;}
+.pull-8 {margin-left:-440px;}
+.pull-9 {margin-left:-495px;}
+.pull-10 {margin-left:-550px;}
+.pull-11 {margin-left:-605px;}
+.pull-12 {margin-left:-660px;}
+.pull-1, .pull-2, .pull-3, .pull-4, .pull-5, .pull-6, .pull-7, .pull-8, .pull-9, .pull-10, .pull-11, .pull-12 {float:left;position:relative;}
+.push-1 {margin:0 -55px 1.5em 55px;}
+.push-2 {margin:0 -110px 1.5em 110px;}
+.push-3 {margin:0 -165px 1.5em 165px;}
+.push-4 {margin:0 -220px 1.5em 220px;}
+.push-5 {margin:0 -275px 1.5em 275px;}
+.push-6 {margin:0 -330px 1.5em 330px;}
+.push-7 {margin:0 -385px 1.5em 385px;}
+.push-8 {margin:0 -440px 1.5em 440px;}
+.push-9 {margin:0 -495px 1.5em 495px;}
+.push-10 {margin:0 -550px 1.5em 550px;}
+.push-11 {margin:0 -605px 1.5em 605px;}
+.push-12 {margin:0 -660px 1.5em 660px;}
+.push-1, .push-2, .push-3, .push-4, .push-5, .push-6, .push-7, .push-8, .push-9, .push-10, .push-11, .push-12 {float:right;position:relative;}
+.prepend-top {margin-top:1.5em;}
+.append-bottom {margin-bottom:1.5em;}
+.box {padding:1.5em;margin-bottom:1.5em;background:#E5ECF9;}
+hr {background:#ddd;color:#ddd;clear:both;float:none;width:100%;height:.1em;margin:0 0 1.45em;border:none;}
+hr.space {background:#fff;color:#fff;visibility:hidden;}
+.clearfix:after, .container:after {content:"\0020";display:block;height:0;clear:both;visibility:hidden;overflow:hidden;}
+.clearfix, .container {display:block;}
+.clear {clear:both;}
+
+/* buttons */
+a.button, button {display:block;float:left;margin:0.7em 0.5em 0.7em 0;padding:5px 10px 5px 7px;border:1px solid #dedede;border-top:1px solid #eee;border-left:1px solid #eee;background-color:#f5f5f5;font-family:"Lucida Grande", Tahoma, Arial, Verdana, sans-serif;font-size:100%;line-height:130%;text-decoration:none;font-weight:bold;color:#565656;cursor:pointer;}
+button {width:auto;overflow:visible;padding:4px 10px 3px 7px;}
+button[type] {padding:4px 10px 4px 7px;line-height:17px;}
+*:first-child+html button[type] {padding:4px 10px 3px 7px;}
+button img, a.button img {margin:0 3px -3px 0 !important;padding:0;border:none;width:16px;height:16px;float:none;}
+button:hover, a.button:hover {background-color:#dff4ff;border:1px solid #c2e1ef;color:#336699;}
+a.button:active {background-color:#6299c5;border:1px solid #6299c5;color:#fff;}
+body .positive {color:#529214;}
+a.positive:hover, button.positive:hover {background-color:#E6EFC2;border:1px solid #C6D880;color:#529214;}
+a.positive:active {background-color:#529214;border:1px solid #529214;color:#fff;}
+body .negative {color:#d12f19;}
+a.negative:hover, button.negative:hover {background-color:#fbe3e4;border:1px solid #fbc2c4;color:#d12f19;}
+a.negative:active {background-color:#d12f19;border:1px solid #d12f19;color:#fff;}
