@@ -1,0 +1,9 @@
+
+<form action="/" method="POST" enctype="multipart/form-data" class="">
+  <div class="clearfix">
+    <label for="file" class="span-2 prepend-2 column">CSV file</label>
+    <input type="file" class="span-6 last column" name="file" id="file" />
+  </div>
+  <hr class="space"/>
+  <p class="top clear"><button type="submit" class="top">Convert!</button></p>
+</form>
