@@ -1,0 +1,27 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <title>Movable Erb</title>
+  <link rel="stylesheet" href="/blueprint.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="/custom.css" type="text/css" media="screen" />
+</head>
+<body>
+  <div class="container" id="container">
+    <div id="header">
+       <h1>Movable Erb</h1>
+    </div>
+
+    <%= yield %>
+
+    <div id="footer">
+      <p>
+        Created by <a href="http://github.com/jgdavey/">Joshua Davey</a>.
+        <a href="http://github.com/jgdavey/movable_erb">Fork me on github</a>.
+      </p>
+    </div>
+  </div>
+</body>
+</html>
